--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+src/app/environments/environment.ts
+src/app/environments/environment.prod.ts
+
+
+
 # Compiled output
 /dist
 /tmp
